# timers

./: LICENSE  index.html  package.json
src/: App.css  App.tsx  api.ts  format.ts  hooks.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  lib.rs  models.rs  tray.rs
src/components/: ActiveBar.tsx  Report.tsx  TaskDetail.tsx  TaskList.tsx
