[package]
name = "timers"
version = "0.1.0"
description = "A task time tracker"
authors = ["you"]
edition = "2021"

[lib]
name = "timers_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
thiserror = "1"
